Adicionado página sobre, update página do blog

--- a/sobre.html
+++ b/sobre.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de Blog</h1>
-    <h2>Post número 1</h2>
-    <h2>Post número 2</h2>
-    <h2>Post número 3</h2>
+    <h1>Sobre nós</h1>    
+    <a href="index.html">Voltar para a página inicial</a>
+    <a href="blog.html">Ir para a página do Blog</a>
 </body>
 </html>
