Update em página de blog

--- a/blog.html
+++ b/blog.html
@@ -10,5 +10,7 @@
     <h2>Post número 1</h2>
     <h2>Post número 2</h2>
     <h2>Post número 3</h2>
+    <a href="sobre.html">Sobre nós</a>
+    
 </body>
 </html>
