Update de links em Blog, Index, Sobre e Vendas

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,8 @@
     <h2>Post número 2</h2>
     <h2>Post número 3</h2>
     <a href="sobre.html">Sobre nós</a>
+    <a href="vendas.html">Ir para página de vendas</a>
+    <a href="index.html">Ir para página inicial</a>
     
 </body>
 </html>
