--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Página Home</h1>
     <a href="vendas.html">Ir para a página de vendas</a>
+    <a href="blog.html">Ir para página do Blog</a>
+    <a href="sobre.html">Sobre nós</a>
 </body>
 </html>
