--- a/sobre.html
+++ b/sobre.html
@@ -9,5 +9,6 @@
     <h1>Sobre nós</h1>    
     <a href="index.html">Voltar para a página inicial</a>
     <a href="blog.html">Ir para a página do Blog</a>
+    <a href="vendas.html">Ir para página de vendas</a>
 </body>
 </html>
