--- a/vendas.html
+++ b/vendas.html
@@ -9,5 +9,7 @@
     <h1>Página de Vendas</h1>
     <p>Vendas = 5000,00</p>
     <a href="index.html">Voltar para a página inicial</a>
+    <a href="blog.html">Ir para página de blog</a>
+    <a href="sobre.html">Sobre nós</a>
 </body>
 </html>
